--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,6 +32,10 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      padding-bottom: 5rem;
+      @media (min-width: 768px) {
+        padding-bottom: 0rem;
+      }
       margin: auto;
       text-align: center;
       p {
@@ -49,10 +53,12 @@
           content: "";
           position: absolute;
           left: 50%;
-          top: 0;
-          height: 70vw;
-          width: 70vw;
+          top: -40%;
+          height: 75vw;
+          width: 75vw;
           @media (min-width: 768px) {
+            top: 0;
+
             height: 40vw;
             width: 40vw;
           }
@@ -159,6 +165,7 @@
 }
 
 #about {
+  overflow: hidden;
   position: relative;
   .-div-about {
     padding-top: 16vw;
